--- a/readme
+++ b/readme
@@ -9,3 +9,7 @@ mark@smithandthompson.net
 Description:
 
 A quick sketch bookmarklet that uses the uClassify free text classifier web service ( http://www.uclassify.com/ ) so you can classify web pages as you view them. Still rough, it just spits out the xml results. At some point I'll add a visualization and streamline the usability.
+
+Using it:
+
+Download the source, pop open uclassify.php and swap in your URL API read key and it should start right up.
